java: villages-fixer: use mul language if present